Added Backbone.js Underscore.js jQuery.js Neat & Bourbon to project

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
                 <li>HTML5 Boilerplate</li>
                 <li>Sass</li>
                 <li>Modernizr</li>
+                tete
             </ul>
         </div>
 
@@ -48,6 +49,8 @@
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="bower_components/jquery/dist/jquery.js"></script>
+        <script src="bower_components/underscore/underscore.js"></script>
+        <script src="bower_components/backbone/backbone.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
