Using jQuery to add items to the list.

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,9 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="../app/bower_components/jquery/dist/jquery.js"></script>
+    <script src="../app/bower_components/underscore/underscore.js"></script>
+    <script src="../app/bower_components/backbone/backbone.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
